# oteapi-optimade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  versions.json
.github/: dependabot.yml
.github/utils/: docker-compose.yml  end2end_test.py  pyproject_toml_pr_body.txt  pyproject_toml_update_pr_body.txt  release_tag_msg.txt  requirements_upload.txt  single_dependency_pr_body.txt
.github/workflows/: cd_dependencies.yml  cd_release.yml  cd_upload_entities.yml  ci_automerge_automated_prs.yml  ci_automerge_dependabot.yml  ci_automerge_dependency_prs.yml  ci_bot_pr_change.yml  ci_cd_updated_main.yml  ci_check_dependencies.yml  ci_dependabot.yml  ci_dependencies.yml  ci_tests.yml  ci_update_dependencies.yml
0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.0.2/CHANGELOG/: index.html
0.0.2/LICENSE/: index.html
0.0.2/all_strategies/: index.html
0.0.2/api_reference/exceptions/: index.html
0.0.2/api_reference/utils/: index.html
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/CHANGELOG/: index.html
0.1.0/LICENSE/: index.html
0.1.0/all_strategies/: index.html
0.1.0/api_reference/exceptions/: index.html
0.1.0/api_reference/utils/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/LICENSE/: index.html
0.2.0/all_strategies/: index.html
0.2.0/api_reference/exceptions/: index.html
0.2.0/api_reference/utils/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/CHANGELOG/: index.html
0.2.1/LICENSE/: index.html
0.2.1/all_strategies/: index.html
0.2.1/api_reference/exceptions/: index.html
0.2.1/api_reference/utils/: index.html
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/CHANGELOG/: index.html
0.2.2/LICENSE/: index.html
0.2.2/all_strategies/: index.html
0.2.2/api_reference/exceptions/: index.html
0.2.2/api_reference/utils/: index.html
0.2.2/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/LICENSE/: index.html
0.3.0/all_strategies/: index.html
0.3.0/api_reference/exceptions/: index.html
0.3.0/api_reference/utils/: index.html
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/CHANGELOG/: index.html
0.4.0/LICENSE/: index.html
0.4.0/all_strategies/: index.html
0.4.0/api_reference/exceptions/: index.html
0.4.0/api_reference/utils/: index.html
0.4.0/examples/: index.html
0.4.0/examples/dlite/: index.html
0.4.0/examples/otelib/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/CHANGELOG/: index.html
0.4.1/LICENSE/: index.html
0.4.1/all_strategies/: index.html
0.4.1/api_reference/exceptions/: index.html
0.4.1/api_reference/utils/: index.html
0.4.1/examples/: index.html
0.4.1/examples/dlite/: index.html
0.4.1/examples/otelib/: index.html
0.4.1/search/: search_index.json
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/CHANGELOG/: index.html
0.4.2/LICENSE/: index.html
0.4.2/all_strategies/: all_strategies.md  index.html
0.4.2/api_reference/exceptions/: index.html
0.4.2/api_reference/utils/: index.html  utils.md
0.4.2/examples/: index.html
0.4.2/examples/dlite/: index.html
0.4.2/examples/otelib/: index.html  otelib.ipynb
0.4.2/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/CHANGELOG/: index.html
0.5.0/LICENSE/: index.html
0.5.0/all_strategies/: index.html
0.5.0/api_reference/exceptions/: index.html
0.5.0/examples/: index.html
0.5.0/examples/dlite/: index.html
0.5.0/examples/otelib/: index.html
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/CHANGELOG/: index.html
0.5.1/LICENSE/: index.html
0.5.1/all_strategies/: index.html
0.5.1/api_reference/exceptions/: index.html
0.5.1/examples/: index.html
0.5.1/examples/dlite/: index.html
0.5.1/examples/otelib/: index.html
0.5.1/search/: search_index.json
0.6.0.dev0/: 404.html  index.html  sitemap.xml
0.6.0.dev0/CHANGELOG/: index.html
0.6.0.dev0/LICENSE/: index.html
0.6.0.dev0/all_strategies/: index.html
0.6.0.dev0/api_reference/_utils/: index.html
0.6.0.dev0/api_reference/exceptions/: index.html
0.6.0.dev0/examples/: index.html
0.6.0.dev0/examples/dlite/: index.html
0.6.0.dev0/examples/otelib/: index.html
0.6.0.dev0/search/: search_index.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/CHANGELOG/: index.html
1.0.0/LICENSE/: index.html
1.0.0/all_strategies/: index.html
1.0.0/api_reference/_utils/: index.html
1.0.0/api_reference/exceptions/: index.html
1.0.0/examples/: index.html
1.0.0/search/: search_index.json
docs/: CHANGELOG.md  index.md
docs/api_reference/: _utils.md  exceptions.md
docs/examples/: chem_formula_pipeline.drawio  dlite.ipynb  index.md  otelib.ipynb
entities/: JSONAPIResourceLinks.yaml  OPTIMADERelationships.yaml  OPTIMADEStructure.yaml  OPTIMADEStructureAttributes.yaml  OPTIMADEStructureResource.yaml  OPTIMADEStructureSpecies.yaml
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: CHANGELOG.md  index.html
latest/LICENSE/: index.html
latest/all_strategies/: index.html
latest/examples/: index.html
latest/search/: search_index.json
main/examples/: index.html
mkdocs_material_overrides/: main.html
oteapi_optimade/: __init__.py  _utils.py  exceptions.py  utils.py
oteapi_optimade/dlite/: parse.py  parse_resources.py
oteapi_optimade/models/: __init__.py  config.py  custom_types.py  parse.py  query.py  resource.py  session.py
oteapi_optimade/soft/: dlite_parse.py
oteapi_optimade/strategies/: download.py  filter.py  function.py  mapping.py  parse.py  resource.py  transformation.py
stable/all_strategies/: index.html
tests/: conftest.py  test_parse.py
tests/dlite/: test_parse.py
tests/static/: README.md  optimade_response.json  test_optimade_config.yml
tests/strategies/: test_resource.py
(+225 files in other folders)
