# Either uncomment the strategy lines as they are needed
# or remove them if they are not needed.
[options.entry_points]
oteapi.download =
  # oteapi_optimade.fileDEMO = oteapi_optimade.strategies.download:DemoFileStrategy
oteapi.filter =
  # oteapi_optimade.filter/DEMO = oteapi_optimade.strategies.filter:DemoFilter
oteapi.function =
  # oteapi_optimade.function/DEMO = oteapi_optimade.strategies.function:DemoFunctionStrategy
oteapi.mapping =
  # oteapi_optimade.mapping/DEMO = oteapi_optimade.strategies.mapping:DemoMappingStrategy
oteapi.parse =
  # oteapi_optimade.application/jsonDEMO = oteapi_optimade.strategies.parse:DemoJSONDataParseStrategy
oteapi.resource =
  # oteapi_optimade.DEMO-access-service = oteapi_optimade.strategies.resource:DemoResourceStrategy
oteapi.transformation =
  # oteapi_optimade.script/DEMO = oteapi_optimade.strategies.transformation:DummyTransformationStrategy
